--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <img src=".trashed-1661013949-IMG_0316.jpg" alt="my profile" style=" width: 100px">
 <h3><B><u>Contact Information</u></B></h3>
 <menu><p><li>E-Mail:kashanmaqbool10@amail.com </li> 
-<li>House # b19 steet # 05 ,sector 11 1/2 Orangi Town Karachi</li>
-<li>Contact # +923 142 65489 </li>
+<li>House # b19steet # 05 ,sector 11 1/2 Orangi Town Karachi</li>
+<li>Contact # +11 783 142 65489 </li>
 </p></menu>
 <h3><u><b>OBJECTIVE</b></u></h3>
 <P>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum <br> is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many <br> desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many <br> web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
