--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>curriculum vitae </title>
+    <link rel="stylesheet" href="style.css"> 
+    <style>
+    </style>
 </head>
 <body>
  <h1> <b><u> KASHAN KHAN</u></b></h1>
-<img src=".trashed-1661013949-IMG_0316.jpg" alt="my profile" style=" width: 100px">
+<img src="./kashi.JPG" alt="my profile" style=" width: 100px">
 <h3><B><u>Contact Information</u></B></h3>
 <menu><p><li>E-Mail:kashanmaqbool10@amail.com </li> 
 <li>House # b19steet # 05 ,sector 11 1/2 Orangi Town Karachi</li>
